# Ycrad-web

./: README.md  _.itch.toml  app.py  app_minimal.py  aptfile.txt  build.py  build.sh  build_itchio.py  build_itchio_final.py  config.py  controls.py  create_thumbnails.py  environment.py  game.html  generate_assets.py  index.html  inventory.py  itchio_page.md  main_web.py  monsters.py  pygbag.js  pyproject.toml  quests.py  render.yaml  requirements.txt  runtime.txt  sw.js  ui.py
build_itchio_final/: animation.py  asset_generator.py  build_itchio_final.py  config.py  controls.py  environment.py  game.html  game_js.html  index.html  inventory.py  main_web.py  map_generator.py  monsters.py  player.py  pyproject.toml  quests.py  tilemap.py  ui.py
build_itchio_final/assets/map/: village.js
