[build-system]
requires = ["pygbag"]
build-backend = "pygbag"

[project]
name = "ycrad-adventurer"
version = "1.0.0"
description = "Ycrad l'Aventurier - RPG Pixel Art"
authors = [{name = "Votre Nom", email = "votre@email.com"}]

[tool.pygbag]
package = "main"
git = false
cdn = "https://pygbag-cdn.itch.ovh"
assets = ["assets/**/*", "*.py"]
app_name = "Ycrad l'Aventurier"
version = "1.0.0"
build = "build/web"
title = "Ycrad l'Aventurier - RPG Épique"
author = "Votre Studio"
description = "Un jeu RPG pixel art dans un monde fantastique"
orientation = "landscape"
width = 800
height = 600
fps = 60
compression = true
cache = true
service_worker = true